--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.2.3",
     "millify": "^4.0.0",
     "next": "12.0.10",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-horizontal-scrolling-menu": "^2.7.0",
